# poirot-rs

./: .env  .gitignore  Cargo.toml  README.md
crates/poirot-core/: Cargo.toml  logs.txt
crates/poirot-core/src/: abi.rs  action.rs  inspector.rs  lib.rs  main.rs  parser.rs
crates/poirot-core/src/abi/: uniswap.json
heisenberghound/: .env  Cargo.toml  logs2.txt
heisenberghound/src/: lib.rs  main.rs
poirot-core/: Cargo.toml
poirot-core/src/: lib.rs  main.rs
