[package]
name = "heisenberghound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "d7bc30e" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "d7bc30e" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "d7bc30e" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "d7bc30e" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "d7bc30e" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "d7bc30e" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "d7bc30e" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", features = ["test-utils"], rev = "d7bc30e" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "d7bc30e" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "d7bc30e" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "d7bc30e" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "d7bc30e" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "d7bc30e" }
reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", rev = "d7bc30e" }



tokio = { version = "1.28.2", features = ["full"] }
eyre = "0.6.8"


# evm
ethers = { version = "2.0.7",  features = ["ipc", "ws"] }


[patch.crates-io]
# patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
ruint = { git = "https://github.com/paradigmxyz/uint" }
revm-primitives = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }
revm = { git = "https://github.com/bluealloy/revm/", branch = "release/v25" }

